--- a/Index.html
+++ b/Index.html
@@ -76,10 +76,10 @@
         <br>
         <div id="jugad">
             <ul class="jug">
-                <!--<li><a href="GuardarEquipo.html">Guardar equipo</a></li>
-                <li><a href="GuardarJugador.html">Guardar jugador</a></li>-->
-                <li><a href="/Php/listar.php">Mostrar equipos guardados</a></li>
-                <li><a href="/Php/listar2.php">Mostrar jugadores guardados</a></li>
+                <!--<li><a href="GuardarEquipo.html">Guardar equipo</a></li>-->
+                <li><a href="GuardarJugador.html">Guardar</a></li>
+                <li><a href="/Php/listar.php">Equipos guardados</a></li>
+                <li><a href="/Php/listar2.php">Jugadores guardados</a></li>
                 <li><a href="">Jugadores</a>
                     <ul>
                         <li><a href="" onclick="GetCambios32('PhiladelphiaPlayers.json')">Sixers</a></li>
